--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "packageManager": "pnpm@8.12.1+sha256.28ca61ece5a496148b73fabc9afb820f9c3fec4f55f04ce45a2cea0a5219f2e1"
+  "packageManager": "pnpm@10.0.0"
 }
