--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@mantine/core": "^7.16.0",
     "@mantine/hooks": "^7.16.0",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
