--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@next/eslint-plugin-next": "^15.1.5",
+    "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "^20.17.14",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
@@ -30,7 +31,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "postcss": "^8.5.1",
     "prettier": "3.4.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.14",
     "typescript": "^5.7.3"
   },
   "packageManager": "pnpm@10.0.0"
