--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/carousel": "^7.17.2",
     "@mantine/core": "^7.17.2",
     "@mantine/hooks": "^7.17.2",
+    "@tabler/icons-react": "^3.31.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "embla-carousel-react": "^8.5.2",
