--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@mantine/carousel": "^7.17.2",
     "@mantine/core": "^7.17.2",
+    "@mantine/form": "^7.17.2",
     "@mantine/hooks": "^7.17.2",
     "@tabler/icons-react": "^3.31.0",
     "@vercel/analytics": "^1.5.0",
