--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@next/eslint-plugin-next": "^15.2.2",
     "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "^22.13.10",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.22.0",
