--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Jimenez Jewelry",
+  "name": "jimenez-jewelry",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -25,20 +25,20 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.0",
-    "@next/eslint-plugin-next": "^15.2.2",
-    "@tailwindcss/postcss": "^4.0.14",
-    "@types/node": "^22.13.10",
+    "@eslint/eslintrc": "^3.3.1",
+    "@next/eslint-plugin-next": "^15.2.3",
+    "@tailwindcss/postcss": "^4.0.15",
+    "@types/node": "^22.13.11",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "eslint": "^9.22.0",
+    "eslint": "^9.23.0",
     "eslint-config-next": "15.1.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.3",
     "prettier": "3.4.2",
-    "tailwindcss": "^4.0.14",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5.8.2"
   },
-  "packageManager": "pnpm@10.6.3"
+  "packageManager": "pnpm@10.6.5"
 }
