#27 Update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
-# Shopify Storefront API URL (e.g., https://your-shop-name.myshopify.com/api/2025-01/graphql.json)
-STOREFRONT_API_URL=
+NEXT_PUBLIC_SHOPIFY_URL= # Your Shopify store URL (e.g., https://your-shop-name.myshopify.com/)
 
-# Shopify Storefront Access Token (Generate from Shopify Admin -> Apps -> Develop Apps -> Storefront API or Headless App)
-X_SHOPIFY_STOREFRONT_ACCESS_TOKEN=
+# Storefront API
+STOREFRONT_API_URL= # Shopify Storefront API URL (e.g., https://your-shop-name.myshopify.com/api/2025-01/graphql.json)
+X_SHOPIFY_STOREFRONT_ACCESS_TOKEN= # Shopify Storefront Access Token (Generate from Shopify Admin -> Apps -> Develop Apps -> Storefront API or Headless App)
 
-# Your Shopify store URL (e.g., https://your-shop-name.myshopify.com/)
-NEXT_PUBLIC_SHOPIFY_URL=
+# Admin API
+ADMIN_API_URL=# Shopify Admin API URL (e.g., https://your-shop-name.myshopify.com/admin/api/2025-01/graphql.json
+X_SHOPIFY_ACCESS_TOKEN= # Shopify Storefront Access Token (Generate from Shopify Admin -> Apps -> Develop Apps -> Storefront API or Headless App)
 
-# Email credentials for notifications or contact forms using Nodemailer
+# Nodemailer (credentials for notifications or contact forms using Nodemailer)
 MAIL=                        # Sender email address (e.g., shop@example.com)
 MAIL_TO=                     # Recipient email (e.g., your personal email)
 MAIL_PASSWORD=               # Email account password or app-specific password if using SMTP
