--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "cheerio": "^1.0.0",
     "embla-carousel-react": "^8.5.2",
     "next": "15.2.3",
     "nodemailer": "^6.10.0",
@@ -42,5 +43,11 @@
     "tailwindcss": "^4.0.15",
     "typescript": "^5.8.2"
   },
-  "packageManager": "pnpm@10.6.5"
+  "packageManager": "pnpm@10.7.1",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@vercel/speed-insights",
+      "sharp"
+    ]
+  }
 }
